integration-tests/src/test-cases/parse-error-bare-evocation/expected
parse error: from "test-cases/parse-error-bare-evocation/input", line 1:
| !x
| ^^
|
+-> Syntax error: pure expressions cannot contain evoke effects, e.g. `!…`
